# its-you

./: .dockerignore  README.md  compose.deploy.yml  compose.developer.yml  compose.yml  config.py  debug.compose.yml  deploy.compose.yml  pyproject.toml  renovate.json
.github/workflows/: all-python-ci.yml  on-push.yml  on-release.yml  template-build-and-push.yml  template-python-ci.yml
docker/python/: Dockerfile
src/config/: interface.py
src/di/: builder.py  container.py
src/di/domain/config/: pydantic.py
src/domain/config/: interface.py
src/domain/interface/common/: interface.py
src/domain/interface/config/: domain.py
src/inner/domain/: config.py
