[project]
name = "its-you"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "injector>=0.22.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.5",
]
